--- a/1.html
+++ b/1.html
@@ -3,14 +3,24 @@
 <head>
 <title>WEB1 -HTML</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw" id="active" >CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+
+<!--
   <h1><a href="index.html"><font color="red">WEB</font></a></h1>
   <ol>
   <li><a href="1.html"><font color="red">HTML</font></a></li>
   <li><a href="2.html"><font color="red">CSS</font></a></li>
   <li><a href="3.html"><font color="red">JavaScript</font></a></li>
   </ol>
+-->
   <p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/GPvW1k9sY6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
